0.65.1
------
1. Use a border width of 1 if gradienting popupmenus.
2. Match KDE4 button text position better.
3. Increase width of menu stripe for Mozilla apps.
4. Fix some issues with oxygen-style combo buttons. (QtCurve creates maps from
   the parent -> entry, and parent -> button - these maps were not being cleared
   when the widget was destroyed).
5. Dont highlight background of checks/radios when this is not enabled, but
   gradient background is.
   
0.65.0
------
 1. Add options to draw editable combos, and spin widgets, as edit fields with
    embedded arrows - oxygen style.
 2. Add option to draw a light border around tab widgets, as opposed to 3d look.
 3. Added ability to specify scrollbar width (11 -> 31, default 15)
 4. Base slider dimensions off of scrollbar width, unless using triangular slider.
 5. Add option to have thinner buttons.
 6. Add option to specify gradient for background of popupmenus.
 7. Enable mouse-over for entry fields.
 8. For mouse-over and focus, use same colour for top and bottom inner parts
    of entry fields.
 9. When using filled/full focus with colored mouse over, then mouse over takes
    precedence.
10. Alter default settings:
        Place arrows of spin buttons, and editable combos, in the edit field.
        Draw a light border around tab widget.
        Thinner buttons.
        Use soft gradient for active tab.
        Use glow style highlight for tab mouse-over (this introduces gaps between tabs).
11. Re-add fix for icons on GEdit tabs - but only for GeditNotebook widgets.
12. Draw entry field backgrounds.
13. Dont use KDE4's disabled background colour.
14. Experimental support for menu-stripe. (Needs menu stipe also enabled in KDE GUI)
15. Enable drawing of list (tree) view lines.
16. Experimental support for drawing of background gradients.

0.64.2
------
1. When using shaded combo buttons, use button colours for border.
2. Disable button order userChrome.css mods for Thunderbird>=3