@@ -4,6 +4,8 @@ static GtkWidget *lastMoEntry=NULL;
 
 static void qtcEntryCleanup(GtkWidget *widget)
 {
+    if(lastMoEntry==widget)
+        lastMoEntry=NULL;
     if (QTC_GE_IS_ENTRY(widget))
     {
         g_signal_handler_disconnect(G_OBJECT(widget),
@@ -12,6 +14,8 @@ static void qtcEntryCleanup(GtkWidget *widget)
                                     (gint)g_object_steal_data(G_OBJECT(widget), "QTC_ENTRY_LEAVE_ID"));
         g_signal_handler_disconnect(G_OBJECT(widget),
                                     (gint)g_object_steal_data(G_OBJECT(widget), "QTC_ENTRY_DESTROY_ID"));
+        g_signal_handler_disconnect(G_OBJECT(widget),
+                                    (gint)g_object_steal_data(G_OBJECT(widget), "QTC_ENTRY_UNREALIZE_ID"));
         g_signal_handler_disconnect(G_OBJECT(widget),
                                     (gint)g_object_steal_data(G_OBJECT(widget), "QTC_ENTRY_STYLE_SET_ID"));
         g_object_steal_data(G_OBJECT(widget), "QTC_ENTRY_HACK_SET");
@@ -27,8 +31,6 @@ static gboolean qtcEntryStyleSet(GtkWidget *widget, GtkStyle *previous_style, gp
 static gboolean qtcEntryDestroy(GtkWidget *widget, GdkEvent *event, gpointer user_data)
 {
     qtcEntryCleanup(widget);
-    if(lastMoEntry==widget)
-        lastMoEntry=NULL;
     return FALSE;
 }
 
@@ -67,6 +69,9 @@ static void qtcEntrySetup(GtkWidget *widget)
                                                      (GtkSignalFunc)qtcEntryLeave, NULL));
         g_object_set_data(G_OBJECT(widget), "QTC_ENTRY_DESTROY_ID",
                           (gpointer)g_signal_connect(G_OBJECT(widget), "destroy-event",
+                                                     (GtkSignalFunc)qtcEntryDestroy, NULL));
+        g_object_set_data(G_OBJECT(widget), "QTC_ENTRY_UNREALIZE_ID",
+                          (gpointer)g_signal_connect(G_OBJECT(widget), "unrealize",
                                                      (GtkSignalFunc)qtcEntryDestroy, NULL));
         g_object_set_data(G_OBJECT(widget), "QTC_ENTRY_STYLE_SET_ID",
                           (gpointer)g_signal_connect(G_OBJECT(widget), "style-set",
