@@ -5,7 +5,8 @@
 3. Increase width of menu stripe for Mozilla apps.
 4. Fix some issues with oxygen-style combo buttons. (QtCurve creates maps from
    the parent -> entry, and parent -> button - these maps were not being cleared
-   when the widget was destroyed).
+   when the widget was destroyed. Also, dont keep reference to last moused-overed
+   entry after its unrealized).
 5. Dont highlight background of checks/radios when this is not enabled, but
    gradient background is.
    
